--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -1,15 +1,23 @@
 server {
-  listen 80 default;
+  listen 80;
+  access_log /var/log/nginx.access_log;
+     location / {
+         proxy_set_header Host $http_host;
+         proxy_set_header X-Real-Ip $remote_addr;
+         proxy_pass http://127.0.0.1:8000;
+     }
+     location ^~ /uploads/ {
+         alias /home/box/web/uploads/;
+     }
+     location  /hello {
+             proxy_set_header Host $http_host;
+         proxy_pass http://127.0.0.1:8080;
+     }
+     location ~* ^.+\.\w+$ {
+         root /home/box/web/public;
+     }
+}
 
-  location ^~ /uploads/ {
-    root /home/box/web;
-  }
-
-  location ~* ^.+\.\w+$ {
-    root /home/box/web/public;
-  }
-
-  location / {
-    return 404;
-  }
+upstream backend {
+    server 127.0.0.1:8080;
 }
